# End-to-end-mini-cloud-storage

./: .gitignore  CMakeLists.txt  NGROK_TEST_RESULTS.md  README.md  auth_test.sh  build.sh  complete_ngrok_test.sh  file_test.sh  final_test.sh  ngrok_test.sh  test.sh  test_auth.sh
.cache/clangd/index/: client.cpp.FA6B35CCFF878520.idx  encryption.cpp.0EF6CE4190255D3C.idx  encryption.cpp.7DD3008D0E0CE610.idx  encryption.h.7A68C9BAC292AAEC.idx  encryption.h.8DF0D6965A78557C.idx  main.cpp.1E3C7B73AEED84FC.idx  main.cpp.A79B3FCAAA2C6AA5.idx  server.cpp.52CF71CD35E88500.idx  tinyfiledialogs.c.A868446944D1A3BB.idx  tinyfiledialogs.h.EA0DCE39CD33B1FB.idx  user_manager.cpp.B223563A3E80CE5A.idx  user_manager.cpp.B4CC4813FB2E8606.idx  user_manager.h.88FED6D0D3107BEA.idx  user_manager.h.FDDCDA076539A75E.idx
client/: client.cpp  main.cpp
common/: encryption.cpp  encryption.h  user_manager.cpp
server/: main.cpp
utility/: encryption.h  user_manager.cpp  user_manager.h
